# Configurator

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  redisaccess.cpp  redisaccess.h  redisdefines.h
